# miniplat

./: CMakeLists.txt  LICENSE  README.md  main.cpp
game/: CMakeLists.txt  Color.h  Component.h  ComponentRegistry.h  Game.cpp  Game.h  KeyMap.h  Player.cpp  Player.h  Screen.h  Shot.cpp  Shot.h  Vec2.h  client.cpp  client.h  init.cpp  init.h  server.cpp  server.h
game/components/: CMakeLists.txt  ColoredBox.cpp  ColoredBox.h  Component.h  PhysicalBody.cpp  PhysicalBody.h  Player.cpp  Player.h  Shot.cpp  Shot.h  registry.cpp  registry.h
game/data/: Action.h  CMakeLists.txt  Color.h  CompAttrs.h  InputStatus.h  KeyMap.h  Rect.cpp  Rect.h  Vec2.h  arena.h
